# spreadsheet-handling-demo

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  sheets-with-profiles.yaml  sheets.yaml
.github/workflows/: ci.yml
data/branches_minimal/: branch.json  managers.json
data/products_minimal/: fees.json  product.json  validations.json
pipelines/: demo_extraction.yaml  demo_extraction_with_generic_step.yaml  demo_extraction_with_io.yaml  demo_fk_helpers.yaml
plugins/: extract.py  extractors.py  transforms.py  verify_steps.py
plugins/extractions/: branch_manager_summary.py
scripts/: dev-local.lib.sh  sha.py  unpack_current_sha.sh  verify.py
tests/: test_transforms.py  test_verify_steps.py
