[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spreadsheet-handling-demo"
version = "0.1.0"
description = "Demo consumer repo for spreadsheet-handling (MARZIPAN NXT config flows)."
authors = [{ name = "Your Team", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.10"

# Wichtig: Pin auf die tatsächlich verfügbare Version (Pre-Release)
dependencies = [
    "spreadsheet-handling==0.1.0b2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pyyaml>=6,<7",
    # pandas ist meist transitiv durch spreadsheet-handling abgedeckt; ggf. explizit pinnen:
    "pandas>=2.0,<3.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["plugins*"]
exclude = ["tmp*", "data*", "target*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
